comments added, footer z-index fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* Global Styles */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -9,11 +10,13 @@
 
 }
 
+/* Body Styles */
 body {
   margin: auto;
   display: block;
 }
 
+/* Body Styles */
 header {
   position: fixed;
   top: 0;
@@ -28,6 +31,7 @@ header {
   z-index: 2;
 }
 
+/* Navigation Styles */
 .nav {
   position: absolute;
   display: flex;
@@ -49,6 +53,7 @@ header {
   filter: drop-shadow(1px 1px 3px rgba(245, 218, 253, 0.772));
 }
 
+/* List Styles */
 ul {
   list-style: none !important;
   padding: 0;
@@ -58,10 +63,12 @@ ul {
   margin-left: 20px;
 }
 
+/* Active Link Styles */
 .active a {
   color: rgb(230, 170, 248);
 }
 
+/* Heading Styles */
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -77,6 +84,7 @@ h1:hover {
   cursor: pointer;
 }
 
+/* Subheading Styles */
 h2 {
   font-size: 2rem;
   line-height: 1.1;
@@ -86,6 +94,7 @@ h2 {
   text-shadow: 2px 2px 5px #0a1537;
 }
 
+/* Subsection Heading Styles */
 h3 {
   margin: 10px
 }
@@ -97,6 +106,7 @@ h3 {
   box-shadow: 3px 4px 4px black;
 }
 
+/* Page View Styles */
 .page-view {
   display: flex;
   justify-content: center;
@@ -106,6 +116,7 @@ h3 {
   margin-bottom: 60px;
 }
 
+/* Card Styles */
 .card {
   background-color: whitesmoke;
   padding: 20px;
@@ -113,6 +124,7 @@ h3 {
   box-shadow: var(--box-shadow);
 }
 
+/* Contact Form Styles */
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -123,12 +135,14 @@ h3 {
   box-shadow: var(--box-shadow);
 }
 
+/* Label Styles */
 label {
   display: block;
   font-weight: 800;
   margin-top: 20px;
 }
 
+/* Error Styles */
 .error {
 font-style: italic;
 font-size: small;
@@ -136,6 +150,7 @@ color:rgb(79, 78, 78);
 margin-bottom: 10px;
 }
 
+/* Input and Textarea Styles */
 input,
 textarea {
   color: black;
@@ -148,6 +163,7 @@ textarea {
   border: dashed 1px grey;
 }
 
+/* Button Styles */
 button {
   background-color: #0f4371ba;
   color: #ffffff;
@@ -169,6 +185,7 @@ button:disabled {
   cursor: not-allowed;
 }
 
+/* Icon Styles */
 .icon {
   color: #72d8f5c1;
   font-size: 40px;
@@ -181,6 +198,7 @@ button:disabled {
   filter: drop-shadow(2px 2px 5px rgba(205, 155, 196, 0.814));
 }
 
+/* Footer Styles */
 .footer-box {
   display: block
 }
@@ -199,6 +217,7 @@ footer {
   justify-content: center;
   align-items: center;
   box-shadow: 1px -3px 6px black;
+  z-index: 2;
 }
 
 .footer-icons {
@@ -207,6 +226,7 @@ footer {
   align-items: center;
 }
 
+/* Resume and contationer styles */
 .container {
   display: block;
   position: relative;
@@ -242,6 +262,7 @@ footer {
   cursor: pointer;
 }
 
+/* Portfolio and project card styles */
 .project-container {
   display: flex;
   flex-wrap: wrap;
@@ -282,7 +303,7 @@ footer {
   border-radius: 10px 10px 0 0;
 }
 
-
+/* Dark Mode Media Query */
 @media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
